<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activityMainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBrownPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />


    <HorizontalScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlists"
                android:id="@+id/playlists"
                android:layout_margin="5dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists"
                android:id="@+id/artists"
                android:layout_margin="5dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums"
                android:id="@+id/albums"
                android:layout_margin="5dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songs"
                android:id="@+id/songs"
                android:layout_margin="5dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:id="@+id/genres"
                android:layout_margin="5dp"
                />


        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_songs"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textSize="@dimen/head_text_size"
            android:layout_gravity="start"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <GridView
                android:id="@+id/recently_played_songs"
                android:layout_width="404dp"
                android:layout_height="404dp"
                android:paddingTop="1dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="1dp"
                android:numColumns="404"
                android:horizontalSpacing="4dp"
                >

            </GridView>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>